work panels- adjusting transitions to fix scroll issue on iphone scroll

--- a/scss/components/_work-panels.scss
+++ b/scss/components/_work-panels.scss
@@ -6,10 +6,10 @@
   width: 100vw;
   height: 100%;
   transform: translateX(110%);
-  transition: all 1000ms;
+  transition: transform 1000ms;
   background-color: var(--color-white);
-  z-index: 9;
   overflow: hidden;
+  z-index: 9;
 
   &.active {
     overflow-y: scroll;
